--- a/wheres-marta/src/App.css
+++ b/wheres-marta/src/App.css
@@ -2,6 +2,10 @@
   text-align: center;
 }
 
+#map {
+  height: 80vh;
+}
+
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 80px;
